--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 
 
         <div class="social_media">
+
+                    <p >-- social media handles --</p>
+
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/ronak-karan-rajpoot-1587ab381..." target="_blank" rel="noopener noreferrer">
               <i class="fab fa-linkedin"></i> LinkedIn ||
