shorten the name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Header -->
   <header id="home">
-    <h1>Ronak Karan Rajpoot</h1>
+    <h1>Ronak  Rajpoot</h1>
     <p>Web Developer | AI Enthusiast</p>
   </header>
 
