--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- Contact -->
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <form method="get" action="ronakkaran233@gmail.com" target="_blank" >  
+    <form method="post" action="https://formspree.io/f/mdkwbaeb" target="_blank" >  
       <input type="text" placeholder="Your Name" required>
       <input type="number" placeholder="Your Phone/Number" required>
       <input type="email" placeholder="Your Email" required>
