--- a/index.html
+++ b/index.html
@@ -79,13 +79,35 @@
   <!-- Contact -->
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <form method="POST" action="https://formspree.io/f/mdkwbaeb" target="_blank" >  
+    <form id="contact-form" method="POST" action="https://formspree.io/f/mdkwbaeb" target="_blank" >  
       <input type="text" placeholder="Your Name" required>
       <input type="number" placeholder="Your Phone/Number" required>
       <input type="email" placeholder="Your Email" required>
       <textarea rows="5" placeholder="Your Message"></textarea>
       <button type="submit">Send Message</button>
     </form>
+
+    <script>
+      const form = document.getElementById("contact-form");
+      const status = document.getElementById("form-status");
+      
+      form.addEventListener("submit", async (event) => {
+        event.preventDefault();
+        const data = new FormData(form);
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+        if (response.ok) {
+          status.textContent = "✅ Thanks for your message!";
+          form.reset();
+        } else {
+          status.textContent = "❌ Oops! Something went wrong.";
+        }
+      });
+      </script>
+
   </section>
 
   <!-- Footer -->
