--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <!-- Hero -->
   <section class="hero">
-    <img src="WhatsApp Image 2025-10-05 at 05.24.24.jpeg" alt="img">
+    <!-- <img src="WhatsApp Image 2025-10-05 at 05.24.24.jpeg" alt="img"> -->
+    <img src="IMG_6635 copy.PNG" alt="img">
     <!-- <img src="https://cdn-icons-png.flaticon.com/512/147/147142.png" alt="Profile Image"> -->
     <div>
       <h2>Hi, I'm Ronak 👋</h2>
