--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
             </a>
             
             <!-- Instagram -->
-            <a href="https://www.instagram.com/ronak_karan15?igsh=MWlmNDh3a2hmZnFleA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
+            <!-- <a href="https://www.instagram.com/ronak_karan15?igsh=MWlmNDh3a2hmZnFleA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-instagram"></i> Instagram   ||
-            </a>
+            </a> -->
             
             <!-- Gmail (use envelope icon) -->
             <a href="mailto:ronakkaran233@gmail.com">
